# azure-ai-content-safety-sdk

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: aacsimage.cmake  aacstext.cmake  directml.cmake  onnxruntime.cmake  opencv.cmake
image/: CMakeLists.txt  config.ini  image.cpp
text/: CMakeLists.txt  config.ini  text.cpp
